Updated some modules

--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -1,5 +1,29 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Big Ol Johnson-nado's Portfolio</h1>
+    <h2>I am a Web Developer</h2>
+    <hr />
+    <a href="../2.4 Movie Ranking Project/index.html">
+        <h3>Movie and Series Ranking Project</h3>
+    </a>
 
+    <a href="../3.4 Birthday Invite Project/">
+        <h3>Birthday Invite Project</h3>
+    </a>
+
+    <hr>
+
+    <a href="./public/about.html">About Me</a> <a href="./public/contact.html">Contact Me</a>
+
+</body>
+</html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
