--- a/3.3 Image Elements/index.html
+++ b/3.3 Image Elements/index.html
@@ -1,6 +1,6 @@
-<!-- Kitten image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg
+<h1>I Am A Cat Person</h1>
+<img src ="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg" alt="A cute orange kitten being held." />
 
 
-<!-- Puppy image URL -->
-https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif
+<h1>I Am A Dog Person</h1>
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/puppy.gif" alt="Dog playing in the sand" />
