--- a/4.0 File Paths/Folder0/index.html
+++ b/4.0 File Paths/Folder0/index.html
@@ -1,10 +1,11 @@
-<h1>All the Animals</h1>
+<h1>All of the Animals</h1>
 <h2>Rabbit:</h2>
-
+<img src=".\rabbit.png" alt="rabbit just hanging out" />
 <h2>Cat:</h2>
-
+<img src=".\Folder3\cat.png" alt="cat lookin kewt" />
 <h2>Dog:</h2>
-
+<img src="..\dog.png" alt="puppy up to no good" />
 <h2>Fish:</h2>
-
+<img src="..\Folder1\fish.png" alt="being a derpy fish" />
 <h2>Bird:</h2>
+<img src="..\Folder1\Folder2\bird.png" alt="hey man I'm a bird" />
