--- a/5.1. Adding CSS/external.html
+++ b/5.1. Adding CSS/external.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet"
+        href="./styles.css" />
   <meta charset="UTF-8">
   <title>External</title>
 </head>
 <body>
-  <h1>Style Me in Green</h1>
+  <h1 class="green-text">Style Me in Green</h1>
 </body>
 </html>
