--- a/6.1 Font Properties/index.html
+++ b/6.1 Font Properties/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  class="main-size">
 
 <head>
   <meta charset="UTF-8">
@@ -12,18 +12,42 @@
     }
 
     /* Don't change the CSS above, add Your CSS below */
+    .coral {
+      color: coral;
+    }
 
+    .double-root {
+      font-size: 2rem;
+    }
     
+    .thicc-weight {
+      font-weight: 900;
+    }
+
+    .caveat {
+      font-family: 'Caveat', cursive;
+    }
+
+    .align-right {
+      text-align: right;
+    }
+
+    .main-size {
+      font-size: 30px;
+    }
   </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <h1>Important CSS Properties</h1>
-  <p>Color</p>
-  <p>Font Size</p>
-  <p>Font Weight</p>
-  <p>Font Family</p>
-  <p>Text Align</p>
+  <p class="coral">Color</p>
+  <p class="double-root">Font Size</p>
+  <p class="thicc-weight">Font Weight</p>
+  <p class="caveat">Font Family</p>
+  <p class="align-right">Text Align</p>
 
   <!-- TODOs
   1. Change the color of <p>Color</p> to "coral" color.
