--- a/6.3 CSS Box Model/index.html
+++ b/6.3 CSS Box Model/index.html
@@ -5,13 +5,45 @@
   <meta charset="UTF-8">
   <title>CSS Box Model</title>
   <style>
-    /* Write your CSS code here */
+    div {
+      width: 200px;
+      height: 200px;
+    }
+    p {
+      margin: 0;
+    }
+
+    .primary-color{
+      background-color: aquamarine;
+      padding: 20px;
+      border: 10px solid black;
+    }
+
+    .secondary-color{
+      background-color: slategray;
+      border: 20px solid black;
+        border-left: 10px solid black;
+        border-right: 10px solid black;
+        margin-left: 260px;
+    }
+
+    .tertiary-color{
+      background-color: darkorange;
+      border: 10px solid black;
+      margin-left: 40px;
+    }
+
+
 
   </style>
 </head>
 
 <body>
-
+  <div class="primary-color"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at sapien porttitor urna elementum lacinia. In
+    id magna pulvinar, ultricies lorem id, vehicula elit. Aliquam eu luctus nisl, vitae pellentesque magna. Phasellus
+    dolor metus, laoreet ac convallis sit amet, efficitur sed dolor.</p></div>
+  <div class="secondary-color"></div>
+  <div class="tertiary-color"></div>
 
   <!-- TODOs:
 1. Create 3 Boxes using the div element.
