--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -14,3 +14,21 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+  
+<head>
+  <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body style="vertical-align: center;">
+  <div>
+    <img class="poster" src=".\assets\images\daenerys.jpeg" alt="Daenerys Targaryen">
+    <h1>THAT SPECIAL MOMENT</h1>
+    <h2>When you've found the perfect avocado at the supermarket</h2>
+  </div>
+</body>
+</html>
