--- a/7.2 CSS Positioning/index.html
+++ b/7.2 CSS Positioning/index.html
@@ -4,7 +4,24 @@
 <head>
   <title>CSS Positioning Exercise</title>
   <style>
-    /* Write your code here */
+    .blue-box {
+      background-color: blue;
+      width: 500px;
+      height: 300px;
+      position: absolute;
+      top: 200px;
+      left: 200px;
+    }
+
+    .red-circle {
+      background-color: red;
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      position: relative;
+      left: 250px;
+      top: 150px;
+    }
   </style>
 </head>
 
